--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="container-fluid">
-    <div class="container">
+    <div class="plan-container">
       <div class="card">
         <img src="images/illustration-hero.svg" class="card-img-top" alt="illustration-hero">
         <div class="card-body">
@@ -48,6 +48,8 @@
         </div>
       </div>
     </div>
+      
+    
 
   </div>
 
